# polars-path

./: .gitignore  Cargo.toml  README.md  learnings.md  main.py  pyproject.toml
polars_path/: __init__.py
src/: expressions.rs  lib.rs
tests/polars_path/: test_all.py
