tool = { rye = { dev-dependencies = [
    "pip>=24.1.2",
    "mypy>=1.10.1",
    "ipython>=8.12.3",
    "pytest>=8.2.2",
] } }
[project]
name = "polars-path"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Gorka Eraña", email = "eranagorka@gmail.com" }
]
dependencies = [
    "maturin[patchelf]",
    "polars",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
